pxc/tests/test_195_header/header2.pxh

public namespace header2;
import core::common -;

metafunction foo int;

hoge; // error
